cleaned up folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-data/data/base_scene.blend
-data/data/CoGenT_A.json
-data/data/CoGenT_B.json
-data/data/properties.json
-
+data/base_scene.blend
+data/CoGenT_A.json
+data/CoGenT_B.json
+data/properties.json
